@@ -1,3 +1,8 @@
+2006-11-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/locale/gnu/c_locale.cc (__convert_to_v): Prefer
+	strtold_l over __strtold_l if available.
+
 2006-11-07  Benjamin Kosnik  <bkoz@redhat.com>
 
 	PR libstdc++/29722
